[workspace]
members = [
    "crates/inviska-core",
    "crates/inviska-desktop/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-2.0-only"
authors = ["whatev-indus"]

[workspace.dependencies]
inviska-core = { path = "crates/inviska-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
