[package]
name = "inviska-desktop"
version = "2.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
inviska-core.workspace = true
rfd = "0.15"
serde.workspace = true
tauri.workspace = true
